--- a/backend/chat/templates/home.html
+++ b/backend/chat/templates/home.html
@@ -106,7 +106,7 @@ a{
 
     </div>
     {% if uploaded_file_url %}
-        <p>File uploaded: {{ uploaded_file_url }}</p>
+        <p>Book added: {{ uploaded_file_url }}</p>
     {% endif %}
     <div id="chat-output"></div>
     <div id="loading" style="text-align: center; display: none;">
