--- a/backend/chat/templates/home.html
+++ b/backend/chat/templates/home.html
@@ -148,7 +148,7 @@ a{
                                     '<div class="card">' +
                                         '<h4 style="margin-bottom: 4px;">' + hit.payload.name + '</h4>' +
                                         '<small style="color:#535353;">' + hit.payload.author + '</small>' +
-                                        '<p>' + hit.payload.description + '</p>' +
+                                        '<p>' + hit.payload.description + '...</p>' +
                                     '</div>' +
                                 '</a>'
                             );
